assembly/src/main/jkube/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: attendance-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - secretName: api-dev-mores-eu-auto-tls
    hosts:
    - api.dev.mores.eu
  rules:
  - host: api.dev.mores.eu
    http:
      paths:
      - path: /attendance
        backend:
          serviceName: attendance-facade
          servicePort: 8080
